Add JMH performance test framework
Refactor tests so that it is easier to run same test against different
XCC implementations.